# Text-Diff.Python

./: .gitignore  LICENSE  README.md  diff_run.py  main.py  pyproject.toml
utils/: diff.py  index.html
utils/assets/css/: style.css
utils/assets/js/: main.js
